fix: use FiberFacade instead of FiberRepository, mutable list for enrichment